src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Latest_Unassigned_Queue_OwnerId__c</fullName>
        <description>used to track the most recent unassigned queue that owned the case. If inbound email message reopens the case, then we need to reassign to most recent unassigned queue.</description>
        <label>Latest Unassigned Queue OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Study__c</fullName>
        <description>the level of study that an enquirer is interested in pursuing at the time of enquiring</description>
        <inlineHelpText>The level of study that an enquirer is interested in pursuing at the time of enquiring</inlineHelpText>
        <label>Level of Study</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma (Monash College)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash University Foundation Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Action__c</fullName>
        <description>used by MC Officers to pop cases as a primary tab, rather than std behavior to a subtab to Contact, which would lose them the sidebar functionality they need in console.</description>
        <formula>IF( CaseNumber != &quot;&quot;,

 HYPERLINK(&quot;javascript:window.open(&apos;/console#/&quot; &amp;Id&amp;&quot;&apos; ,&apos;_top&apos;);&quot;, &quot;View Enquiry Record&quot;) , &quot;&quot;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGE_Cat_1__c</fullName>
        <description>Category 1 for Monash Graduate Education. It was created as Category Level 1 field has too many values and is creating administrative overhead when managing it</description>
        <label>MGE Cat 1</label>
        <picklist>
            <picklistValues>
                <fullName>Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directors Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thesis Exams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional staff development</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MGE_Cat_2__c</fullName>
        <description>Category 2 for Monash Graduate Education. It was created as Category Level 2 field has too many values and is creating administrative overhead when managing it</description>
        <label>MGE Cat 2</label>
        <picklist>
            <controllingField>MGE_Cat_1__c</controllingField>
            <picklistValues>
                <fullName>Academic Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic  Staff Workshops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance/ECOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards And Prizes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biems / Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Scholarship Variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Of Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Of Supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Of Thesis Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudstor Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Cases (CoE, R&amp;R etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Discontinuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecoe/Esos Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Variation (Scholarship Variation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <description>copied over from REST API result</description>
        <label>Managing Faculty</label>
        <picklist>
            <controllingField>Enquiry_Type__c</controllingField>
            <picklistValues>
                <fullName>Art, Design and Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, Nursing and Health Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Short course Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Pathways</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Commencement_Date__c</fullName>
        <label>Original Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Id__c</fullName>
        <description>used to map original records from old CRM</description>
        <externalId>true</externalId>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owned_by_Monash_Connect__c</fullName>
        <description>used to isolate MC enquiries, be it owned by MC users or queues, in list views</description>
        <formula>OR(
CONTAINS($UserRole.Name ,&quot;Monash Connect&quot;),
CONTAINS( Case_Owner_Name__c ,&quot;Monash Connect&quot;),
CONTAINS( Case_Owner_Name__c ,&quot;Airport&quot;) /* Monash Connect are responsible for these too */
)</formula>
        <label>Owned by Monash Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Commencement_Date__c</fullName>
        <description>This field was created to support MGE deferral form &apos;Proposed commencement date&apos; field.</description>
        <label>Proposed Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provided_Email__c</fullName>
        <description>used in list views to display likely source email address for case</description>
        <formula>IF(  NOT(ISBLANK(ContactId )), Contact.Email,  SuppliedEmail )</formula>
        <label>Provided Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Status__c</fullName>
        <label>QA Status</label>
        <picklist>
            <picklistValues>
                <fullName>QA Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Flow_Case_ID__c</fullName>
        <description>unique ID from external ticketing system</description>
        <externalId>true</externalId>
        <label>Q-Flow Case ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Flow_Outbound_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate Q-Flow integration has taken place to return the Q-Flow time details.</description>
        <label>Q-Flow Message received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <label>Qualification Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (International)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>Date in which the response occurred.</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Required__c</fullName>
        <label>Response Required</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting confirmation to close enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting further information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_End_Time__c</fullName>
        <description>Used for determining enquiry turnaround time.</description>
        <label>Service End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Start_Time__c</fullName>
        <description>Used for determining enquiry turnaround time.</description>
        <label>Service Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sponsor_Name__c</fullName>
        <label>Sponsor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <label>Student Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Funded_By__c</fullName>
        <label>Study Funded By</label>
        <picklist>
            <picklistValues>
                <fullName>I will fund my study or I&apos;m eligible for RTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I need to apply for scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I already have a scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My employer/government will sponsor me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_Area_of_Interest__c</fullName>
        <description>populated via web forms</description>
        <label>Area of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication and media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design, creative art, architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment and sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities and culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law, policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, health, pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_City__c</fullName>
        <label>Supplied City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Country_of_Residence__c</fullName>
        <description>populated via web form, copied to Contact</description>
        <label>Country of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>ADELIE LAND (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA, NFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH ANTARCTIC TERRITORY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_Current_Location__c</fullName>
        <description>This field was created to support MGE deferral form &apos;Your current location&apos; field.</description>
        <label>Supplied Current Location</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_Date_of_Birth__c</fullName>
        <description>provided on web forms and during F2F interactions at call centre</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplied_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapped to Contact on webform submit</description>
        <label>Supplied Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplied_First_Name__c</fullName>
        <label>Supplied Given Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Last_Name__c</fullName>
        <label>Supplied Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Mobile__c</fullName>
        <description>used by web forms</description>
        <label>Supplied Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplied_Name_of_Institution__c</fullName>
        <description>populated via web forms</description>
        <label>Name of Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>ADELIE LAND (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL INDIAN OCEAN COUNTRIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER AFRICAN COUNTRIES NOT LISTED ABOVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER OVERSEAS COUNTRIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA, NFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_Person_ID__c</fullName>
        <description>student id that has been supplied to provide context to case record</description>
        <label>Supplied Person ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Postcode__c</fullName>
        <label>Supplied Postcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Salutation__c</fullName>
        <description>This field was created to support MGE deferral form &apos;Title&apos; field.</description>
        <label>Supplied Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_State__c</fullName>
        <label>Supplied State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Street_Address__c</fullName>
        <label>Supplied Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Supervisors_Email__c</fullName>
        <description>This field was created to support MGE Deferral form &apos;Supervisors Email Address&apos; field.</description>
        <label>Supplied Supervisor&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplied_Supervisors_Name__c</fullName>
        <description>This field was created to support MGE deferral form &apos;Main Supervisor&apos;s name&apos; field.</description>
        <label>Supplied Supervisor&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Minutes__c</fullName>
        <description>rollup of all business minutes to enquiry level</description>
        <label>Total Business Minutes</label>
        <summarizedField>queueHours__c.Minutes__c</summarizedField>
        <summaryForeignKey>queueHours__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unread_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true, then user needs to open the task record representing the email in order to clear this field (via VF)</description>
        <label>Unread Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wait_End_Time__c</fullName>
        <description>QFlow timestamp for reporting</description>
        <label>Wait End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wait_Start_Time__c</fullName>
        <description>Qflow timestamp for reporting</description>
        <label>Wait Start Time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Alerts__c</columns>
        <columns>Latest_Inbound_Email__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>NAME</columns>
        <columns>Provided_Email__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category_Level_1__c</columns>
        <columns>Category_Level_2__c</columns>
        <columns>Course_Title__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>01. Unassigned Monash Connect Enquiries</label>
        <queue>Monash_Connect_Enquiries</queue>
        <sharedTo>
            <roleAndSubordinates>Monash_Connect</roleAndSubordinates>
            <roleAndSubordinates>OFS_Leader</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenMonashConnectCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Alerts__c</columns>
        <columns>Latest_Inbound_Email__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>NAME</columns>
        <columns>Provided_Email__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category_Level_1__c</columns>
        <columns>Category_Level_2__c</columns>
        <columns>Course_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Enquiry_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Monash Connect,Airport</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>Spam</value>
        </filters>
        <label>All Open Monash Connect Enquiries</label>
        <sharedTo>
            <roleAndSubordinates>Monash_Connect</roleAndSubordinates>
            <roleAndSubordinates>OFS_Leader</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Alerts__c</columns>
        <columns>Latest_Inbound_Email__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>NAME</columns>
        <columns>Provided_Email__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category_Level_1__c</columns>
        <columns>Category_Level_2__c</columns>
        <columns>Course_Title__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Enquiries</label>
    </listViews>
    <listViews>
        <fullName>All_Enquiries_last7</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Alerts__c</columns>
        <columns>Latest_Inbound_Email__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>NAME</columns>
        <columns>Provided_Email__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category_Level_1__c</columns>
        <columns>Category_Level_2__c</columns>
        <columns>Course_Title__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All Enquiries Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>All_Enquiries_today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Alerts__c</columns>
        <columns>Latest_Inbound_Email__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>NAME</columns>
        <columns>Provided_Email__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Category_Level_1__c</columns>
        <columns>Category_Level_2__c</columns>
        <columns>Course_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Enquiries Today</label>
    </listViews>
</CustomObject>